
Code cleanup.

-------------------------------------------

1.32 Reprocess most OrbSim1 runs
-----------------
ScienceTools v9r4p1
Common v2r9p0
FastMon v2r7p0
Monitor dp20080207_v2
ft2Util v1r1p30
EngineeringModelRoot v3r10p1 (For a while. Not sure since when.)

Use LSF host balancing with glastcobs,glastyilis. Doesn't seem to do much.
Move pipeline module to GPLtools.
Use glastdataq for everything.
Require sufficient scratch space.  Don't have good examples for all types.
Import config before GPLinit so logging works.
Don't use -z with runStrip.
Set environment variables (except LD_LIB...) in config, not XML.
Put a switch in config to disable cleanup.
Eliminate RUN_RAWDIR variable.
Make a minimum crumb size of 2500.

-------------------------------------------

1.33
-----------------
Common v2r10p0
FastMon v2r8p0
ft2Util v1r1p34

Crumble digi file.
Run svacTuple at crumb level.
Supply proper VERSION keyword for ls1, ls2.
Set disk space requirements to a minimum of 1GB.
Launch ASP when all FT[12] in a downlink are registered.

Use xroot for run-level products.
Use new netlogging features.
Munge data catalog names.

Added initial version of run Verification. Not actually running it yet.

-------------------------------------------

1.34
-----------------
GR v9r11p1
ft2Util v1r1p35

Make lots of little crumbs.
Supply proper VERSION keyword for ls5 (=ft2).
-------------------------------------------

1.35
-----------------
Common v2r11p0
FastMon v2r9p0
ft2Util v1r1p37

Run alarms on digiEor, reconEor.
-------------------------------------------

1.36
-----------------
Common v2r12p2
ft2Util v1r1p39
EngineeringModelRoot v3r11

Run alarms on digiTrend, reconTrend.
Do run cleanup.  Hardwired since OpsSim2 gives complete runs.
Crumb size tweakage.
Move DOWNLINK_RAWDIR to long-term storage when dl is complete.
Use fileNames.fileCopy for single-crumb merges, thus automatically creating
output dir.
Pay attention to return status on tree merges.